# oop1Domaci

CLI/: CLIParser.cpp  CLIParser.h  CMakeLists.txt  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  StreamHandler.cpp  StreamHandler.h  Structures.h  main.cpp  text.txt
CLI copy/: CLIParser.cpp  CMakeLists.txt  Interpreter.cpp  StreamHandler.cpp  StreamHandler.h  Structures.h  main.cpp
CLI copy/Commands/: Batch.cpp  Batch.h  Date.cpp  Echo.cpp  Head.cpp  Prompt.h  Rm.cpp  Time.cpp  Time.h  Touch.cpp  Touch.h  Tr.cpp  Truncate.cpp  Wc.cpp
CLI/Commands/: Batch.cpp  Command.h  Date.cpp  Date.h  Echo.cpp  Echo.h  Head.cpp  Head.h  Prompt.cpp  Rm.cpp  Rm.h  Time.cpp  Time.h  Touch.cpp  Touch.h  Tr.cpp  Tr.h  Truncate.cpp  Truncate.h  Wc.cpp  Wc.h
